samples/_failures_safe/1761004747_824e0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d22c429b.c: In function ‘main’:
./samples/SAFE/__tmp_d22c429b.c:178:15: error: expected ‘;’ at end of input
  178 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_d22c429b.c:178:9: error: expected declaration or statement at end of input
  178 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_d22c429b.c:178:9: error: expected declaration or statement at end of input
